--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
+title: Welcome to my Portfolio
+description: A compilation of my project thus far.
